Styling: fixed css bug making tagline appear offcentre

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -227,6 +227,8 @@ nav ul, .wordcloud, .wordlist, .gridcontainer, .griditem ul, .cards, .links, .de
     padding-top 1rem
     padding-bottom 1rem
     background-color #f0f0fa
+    a
+      display block 
 .cards
   display flex
   flex-direction column
@@ -389,6 +391,7 @@ a > span // Make citations appear correctly
     padding 0
     border none
     font-size 1.5rem
+    margin-left 0
   main
     flex-direction row
   figure
